exports[`Video has correct default options 1`] = `
<div
  className="grommetux-video"
  onBlur={[Function onBlur]}
  onFocus={[Function onFocus]}
  onMouseDown={[Function onMouseDown]}
  onMouseEnter={[Function onMouseEnter]}
  onMouseLeave={[Function bound _onInteractionOver]}
  onMouseMove={[Function onMouseMove]}
  onMouseUp={[Function onMouseUp]}>
  <video
    autoPlay={false}
    loop={false}
    muted={false}
    onAbort={[Function anonymous]}
    onCanPlay={[Function anonymous]}
    onCanPlayThrough={[Function anonymous]}
    onDurationChange={[Function anonymous]}
    onEmptied={[Function anonymous]}
    onEncrypted={[Function anonymous]}
    onEnded={[Function anonymous]}
    onError={[Function anonymous]}
    onLoadStart={[Function anonymous]}
    onLoadedData={[Function anonymous]}
    onLoadedMetadata={[Function anonymous]}
    onPause={[Function anonymous]}
    onPlay={[Function anonymous]}
    onPlaying={[Function anonymous]}
    onProgress={[Function anonymous]}
    onRateChange={[Function anonymous]}
    onSeeked={[Function anonymous]}
    onSeeking={[Function anonymous]}
    onStalled={[Function anonymous]}
    onSuspend={[Function anonymous]}
    onTimeUpdate={[Function anonymous]}
    onVolumeChange={[Function anonymous]}
    onWaiting={[Function anonymous]}
    poster={undefined}>
    <source
      src="/video/test.mp4"
      type="video/mp4" />
  </video>
  <div>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none grommetux-video__overlay"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined}>
        <button
          aria-label="Play Video"
          className="grommetux-button grommetux-button--plain grommetux-video__button"
          disabled={false}
          href={undefined}
          onBlur={[Function bound _onBlur]}
          onClick={[Function bound _togglePlay]}
          onFocus={[Function bound _onFocus]}
          onMouseDown={[Function bound _onMouseDown]}
          onMouseUp={[Function bound bound _onMouseDown]}
          type="button">
          <svg
            aria-label="circle-play"
            className="grommetux-control-icon grommetux-control-icon-circle-play grommetux-video__button__icon grommetux-control-icon--xlarge grommetux-control-icon--responsive grommetux-color-index-brand"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px">
            <path
              d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M9.5,15.5 L15.5,12 L9.5,8.5 L9.5,15.5 Z M10.5,13.5 L12.5,12 L10.5,10.5 L10.5,13.5 Z"
              fill="none"
              stroke="#000000"
              strokeWidth="2" />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video transfers arbitrary props 1`] = `
<div
  className="grommetux-video"
  onBlur={[Function onBlur]}
  onFocus={[Function onFocus]}
  onMouseDown={[Function onMouseDown]}
  onMouseEnter={[Function onMouseEnter]}
  onMouseLeave={[Function bound _onInteractionOver]}
  onMouseMove={[Function onMouseMove]}
  onMouseUp={[Function onMouseUp]}>
  <video
    autoPlay={false}
    data-flavor="coconut"
    loop={false}
    muted={false}
    onAbort={[Function anonymous]}
    onCanPlay={[Function anonymous]}
    onCanPlayThrough={[Function anonymous]}
    onDurationChange={[Function anonymous]}
    onEmptied={[Function anonymous]}
    onEncrypted={[Function anonymous]}
    onEnded={[Function anonymous]}
    onError={[Function anonymous]}
    onLoadStart={[Function anonymous]}
    onLoadedData={[Function anonymous]}
    onLoadedMetadata={[Function anonymous]}
    onPause={[Function anonymous]}
    onPlay={[Function anonymous]}
    onPlaying={[Function anonymous]}
    onProgress={[Function anonymous]}
    onRateChange={[Function anonymous]}
    onSeeked={[Function anonymous]}
    onSeeking={[Function anonymous]}
    onStalled={[Function anonymous]}
    onSuspend={[Function anonymous]}
    onTimeUpdate={[Function anonymous]}
    onVolumeChange={[Function anonymous]}
    onWaiting={[Function anonymous]}
    poster={undefined}>
    <source
      src="/video/test.mp4"
      type="video/mp4" />
  </video>
  <div>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none grommetux-video__overlay"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined}>
        <button
          aria-label="Play Video"
          className="grommetux-button grommetux-button--plain grommetux-video__button"
          disabled={false}
          href={undefined}
          onBlur={[Function bound _onBlur]}
          onClick={[Function bound _togglePlay]}
          onFocus={[Function bound _onFocus]}
          onMouseDown={[Function bound _onMouseDown]}
          onMouseUp={[Function bound bound _onMouseDown]}
          type="button">
          <svg
            aria-label="circle-play"
            className="grommetux-control-icon grommetux-control-icon-circle-play grommetux-video__button__icon grommetux-control-icon--xlarge grommetux-control-icon--responsive grommetux-color-index-brand"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px">
            <path
              d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M9.5,15.5 L15.5,12 L9.5,8.5 L9.5,15.5 Z M10.5,13.5 L12.5,12 L10.5,10.5 L10.5,13.5 Z"
              fill="none"
              stroke="#000000"
              strokeWidth="2" />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
